# gc-valent

./: .dataURLs.txt  .gitignore  .gitmodules  .jenkinsfile  .pylintrc  BMES_submission_adam.ipynb  Doxyfile  Heatmap.ipynb  IL2-15 Nonadditive.ipynb  Nonzero Boolean  Nonzero Boolean.csv  README.md  Scott.ipynb  Shuffle_ODE.py  Shuffled Nonzero Boolean.csv  Tensor_decomposition_plotting.ipynb  Untitled.ipynb  Visterra.ipynb  VisterraThree.ipynb  VisterraTwo.ipynb  approx_jacobian_scratchwork.ipynb  genFigures.py  liveCellGating_0423_plate1.ipynb  liveCellGating_0423_plate1.md  liveCellGating_0423_plate2.ipynb  liveCellGating_0423_plate2.md  liveCellGating_0426_plate1.ipynb  liveCellGating_0426_plate1.md  liveCellGating_0426_plate2.ipynb  liveCellGating_0426_plate2.md  liveCellGating_0516_plate1.ipynb  makefile  model_prediction.ipynb  pSTAT_tensor.ipynb  plot_R2X.ipynb  practice.csv  pyproject.toml  requirements.txt  run_fit.py  run_fit_advi.py  (+5 more)
IL2_15_no_traf/: chain-0.csv  chain-1.csv
IL2_IL15_advi_results/: chain-0.csv
IL2_IL15_model_results/: chain-1.csv  chain-2.csv  chain-3.csv
IL2_model_results/: chain-0.csv  chain-1.csv  chain-2.csv  chain-3.csv  fitting_IL2Rb_only.csv
IL4-7_crosstalk_results/: chain-0.csv  chain-1.csv  chain-2.csv  chain-3.csv
IL4-7_fitADVI_results/: chain-0.csv
IL4-7_model_results/: chain-0.csv  chain-1.csv  chain-2.csv  chain-3.csv
Manuscript/: References.bib  gatingFigure.afdesign
ckine/: FCimports.py  Gating_w_Comp_0423_plate1.ipynb  Gating_w_Comp_0423_plate2.ipynb  Gating_w_Comp_0426_plate1.ipynb  Gating_w_Comp_0426_plate2.ipynb  (+45 more)
(+818 files in other folders)
