[tool.poetry]
name = "ckine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.4"
svgutils = "^0.3.4"
seaborn = "0.11.2"
scipy = "^1.7.3"
pandas = "1.3.4"
matplotlib = "3.5.3"
scikit-learn = "^1.0.1"
tensorly = "^0.7.0"
pyarrow = "^6.0.1"
flowcytometrytools = {git = "https://github.com/eyurtsev/FlowCytometryTools.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "ckine.figures.figureCommon:genFigure"
