[tool.poetry]
name = "ckine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
svgutils = "^0.3.4"
seaborn = "^0.11.2"
scipy = "^1.12"
pandas = "^1.4"
matplotlib = "^3.8"
scikit-learn = "^1.5"
tensorly = "^0.7.0"
pyarrow = "^14.0"
flowcytometrytools = {git = "https://github.com/borcuttjahns/FlowCytometryTools.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "ckine.figures.figureCommon:genFigure"
